k8s/postgres/pgadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: postgres
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  selector:
    component: pgadmin
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      component: pgadmin
  template:
    metadata:
      labels:
        component: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.0.0
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: pgadmin-volume
              mountPath: /pgadmin
      volumes:
        - name: pgadmin-volume
          persistentVolumeClaim:
            claimName: pgadmin-volume-claim
